--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
     <div class="container">
       <div class="row">
         <div class="content">
-          <div class="content1 col-12 col-md-6 wow fadeInLeft"  data-wow-duration="2s">
+          <div class="content1 col-12 col-md-6 wow fadeInLeft"  data-wow-duration="1500ms">
             <p>IT SUPPORT FOR BUSINESS</p>
             <h2>Preparing for your success <br> trusted source in IT services.</h2>
           </div>
-          <div class="content2 col-12 col-md-6 wow fadeInRight"  data-wow-duration="2s" >
+          <div class="content2 col-12 col-md-6 wow fadeInRight"  data-wow-duration="1500ms" >
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore
               et dolore.</p>
           </div>
@@ -114,7 +114,7 @@
       </div>
       <div class="imges">
         <div class="row">
-          <div class="imges-itme col-12 col-md-6 col-lg-4 wow slideInRight" >
+          <div class="imges-itme col-12 col-md-6 col-lg-4 wow fadeInRight" >
             <div>
               <img src="imges/asset 0.jpeg" alt="">
               <div>
@@ -123,7 +123,7 @@
               </div>
             </div>
           </div>
-          <div class="imges-itme col-12 col-md-6 col-lg-4 wow slideInRight"  data-wow-delay="500ms">
+          <div class="imges-itme col-12 col-md-6 col-lg-4 wow fadeInRight"  data-wow-delay="500ms">
             <div>
               <img src="imges/asset 1.jpeg" alt="">
               <div>
@@ -132,7 +132,7 @@
               </div>
             </div>
           </div>
-          <div class="imges-itme col-12 col-md-6 col-lg-4 wow slideInRight"  data-wow-delay="1s">
+          <div class="imges-itme col-12 col-md-6 col-lg-4 wow fadeInRight"  data-wow-delay="1s">
             <div>
               <img src="imges/asset 2.jpeg" alt="">
               <div>
@@ -197,29 +197,29 @@
   <section class="sec-support" id="support">
     <div class="container">
       <div class="row">
-        <div class="img col-12 col-md-6 wow slideInLeft" data-wow-duration="1s">
+        <div class="img col-12 col-md-6 wow fadeInLeft" data-wow-duration="1s">
           <img src="imges/asset 8.png" alt="">
         </div>
         <div class="content col-12 col-md-6">
-          <p class="p1 wow slideInRight" data-wow-delay="100ms">It Support For Business</p>
-          <h5 class="wow slideInRight" data-wow-delay="200ms">Preparing for your success trusted source in IT services.</h5>
-          <p class="p2 wow slideInRight" data-wow-delay="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+          <p class="p1 wow fadeInRight" data-wow-delay="100ms">It Support For Business</p>
+          <h5 class="wow fadeInRight" data-wow-delay="200ms">Preparing for your success trusted source in IT services.</h5>
+          <p class="p2 wow fadeInRight" data-wow-delay="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
             labore</p>
           <ul>
-            <li class=" wow slideInRight"data-wow-delay="400ms"><i class="fa-solid fa-check"></i>
+            <li class=" wow fadeInRight"data-wow-delay="400ms"><i class="fa-solid fa-check"></i>
               <p>which means as the company ramps</p>
             </li>
-            <li class="wow slideInRight" data-wow-delay="500ms"><i class="fa-solid fa-check"></i>
+            <li class="wow fadeInRight" data-wow-delay="500ms"><i class="fa-solid fa-check"></i>
               <p>Available in 14.1-in. and 16-in. versions.</p>
             </li>
-            <li class="wow slideInRight" data-wow-delay="600ms"><i class="fa-solid fa-check"></i>
+            <li class="wow fadeInRight" data-wow-delay="600ms"><i class="fa-solid fa-check"></i>
               <p>The potential loss of the Touch Bar.</p>
             </li>
-            <li class="wow slideInRight" data-wow-delay="700ms"><i class="fa-solid fa-check"></i>
+            <li class="wow fadeInRight" data-wow-delay="700ms"><i class="fa-solid fa-check"></i>
               <p>High-speed USB 4.0.</p>
             </li>
           </ul>
-          <a href="" class="wow slideInRight" data-wow-delay="800ms">View Detaiks</a>
+          <a href="" class="wow fadeInRight" data-wow-delay="800ms">View Detaiks</a>
         </div>
       </div>
     </div>
@@ -235,28 +235,28 @@
     <div class="container">
       <div class="row">
         <div class="card">
-          <div class="card-itme col-12 col-sm-6 col-md-4 col-lg-3 wow slideInLeft" data-wow-delay="800ms">
+          <div class="card-itme col-12 col-sm-6 col-md-4 col-lg-3 wow fadeInLeft" data-wow-delay="800ms">
             <img src="imges/asset 9.jpeg" alt="">
             <div class="cont">
               <h5>Jullia Siger</h5>
               <p>Web Designer</p>
             </div>
           </div>
-          <div class="card-itme col-12 col-sm-6 col-md-4 col-lg-3 wow slideInLeft" data-wow-delay="400ms">
+          <div class="card-itme col-12 col-sm-6 col-md-4 col-lg-3 wow fadeInLeft" data-wow-delay="400ms">
             <img src="imges/asset 10.jpeg" alt="">
             <div class="cont">
               <h5>Claire Divas</h5>
               <p>Web Designer</p>
             </div>
           </div>
-          <div class="card-itme col-12 col-sm-6 col-md-4 col-lg-3 wow slideInRight" data-wow-delay="200ms">
+          <div class="card-itme col-12 col-sm-6 col-md-4 col-lg-3 wow fadeInRight" data-wow-delay="200ms">
             <img src="imges/asset 11.jpeg" alt="">
             <div class="cont">
               <h5>Makhaia Antitni</h5>
               <p>Developer</p>
             </div>
           </div>
-          <div class="card-itme col-12 col-sm-6 col-md-4 col-lg-3 wow slideInRight" data-wow-delay="600ms">
+          <div class="card-itme col-12 col-sm-6 col-md-4 col-lg-3 wow fadeInRight" data-wow-delay="600ms">
             <img src="imges/asset 12.jpeg" alt="">
             <div class="cont">
               <h5>Harry Steve</h5>
@@ -294,7 +294,7 @@
       </div>
       <div class="row">
         <div class="card">
-          <div class="card-itme col-12 col-md-6 wow slideInLeft" data-wow-duration="1s">
+          <div class="card-itme col-12 col-md-6 wow fadeInLeft" data-wow-duration="1s">
             <div>
               <div class="img">
                 <div>
@@ -314,7 +314,7 @@
               </div>
             </div>
           </div>
-          <div class="card-itme col-12 col-md-6 wow slideInRight" data-wow-duration="1s">
+          <div class="card-itme col-12 col-md-6 wow fadeInRight" data-wow-duration="1s">
             <div>
               <div class="img">
                 <div>
@@ -496,11 +496,11 @@
   <!-- end section blogs -->
 
   <!-- start section contact -->
-  <section class="sec-contact wow fadeInDown" data-wow-delay="300ms" id="contact">
+  <section class="sec-contact" id="contact">
     <div class="container">
       <div class="row">
         <div class="contact">
-          <form action="" class="col-12 col-lg-8">
+          <form action="" class="col-12 col-lg-8 wow fadeInRight" data-wow-delay="300ms">
             <h5>Get In Touch</h5>
             <div class="input">
               <div class="input-itme">
@@ -528,7 +528,7 @@
             </div>
             <button type="submit">Send Message</button>
           </form>
-          <div class="cont col-12 col-lg-4">
+          <div class="cont col-12 col-lg-4 wow fadeInRight" data-wow-delay="600ms">
             <span></span>
             <h5 >Don't hesitate to <br> contact us</h5>
             <div class="cont-itme">
