--- a/index.html
+++ b/index.html
@@ -169,21 +169,23 @@
       <div class="row">
         <div class="content-servided-itme col-12 col-md-6 col-lg-4 wow slideInLeft"  data-wow-delay="1s">
           <p class="p1">01</p>
-          <img src="imges/w.png" alt="">
+          <!-- <img src="imges/w.png" alt=""> -->
+          <i class="fa-regular fa-comments svg"></i>
           <h6>Advertising and <br> Marketing</h6>
           <p class="p2">We’ve been a strategy thought leader for <br> nearly five decades and we bring</p>
           <a href="">Read More <i class="fa-solid fa-arrow-right"></i></a>
         </div>
         <div class="content-servided-itme col-12 col-md-6 col-lg-4 wow slideInLeft" data-wow-delay="500ms">
           <p class="p1">02</p>
-          <img src="imges/w.png" alt="">
+          <i class="fa-solid fa-bezier-curve  svg"></i>
+          <i class="fa-solid fa-pen-nib svg2"></i>
           <h6>Website <br> Development</h6>
           <p class="p2">We’ve been a strategy thought leader for <br> nearly five decades and we bring</p>
           <a href="">Read More <i class="fa-solid fa-arrow-right"></i></a>
         </div>
         <div class="content-servided-itme col-12 col-md-6 col-lg-4 wow slideInLeft">
           <p class="p1">01</p>
-          <img src="imges/w.png" alt="">
+            <i class="fa-regular fa-thumbs-up svg"></i>
           <h6>Mobile App <br> Development</h6>
           <p class="p2">We’ve been a strategy thought leader for <br> nearly five decades and we bring</p>
           <a href="">Read More <i class="fa-solid fa-arrow-right"></i></a>
